<resources>
    <string name="app_name">handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник чего-то</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Рыба</string>
    <string name="menu_gallery">Удочки</string>
    <string name="menu_slideshow">Снастья</string>
    <string name="share">Истории</string>
    <string name="send">Советы</string>
</resources>