<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fish"
            android:icon="@drawable/ic_menu_camera"
            android:onClick="fishEvent"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/spiner"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/bilt"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Trololo">
         <menu>
             <item
                 android:id="@+id/story"
                 android:icon="@android:drawable/ic_menu_share"
                 android:title="@string/share" />
             <item
                 android:id="@+id/lifehack"
                 android:icon="@android:drawable/ic_btn_speak_now"
                 android:title="@string/send" />
         </menu>


    </item>
</menu>